--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.9.1",
     "mpath": ">=0.5.1",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
